fixing text wrapping

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -229,7 +229,6 @@ abbr {
 .data-list li {
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .translations dt { display: none; }
